<resources>
    <string name="app_name">RPC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_game_button">Let\'s play!</string>
    <string name="rock">rock</string>
    <string name="paper">paper</string>
    <string name="scissors">scissors</string>
    <string name="select_weapon_prompt">Choose your weapon!</string>
    <string name="starting_score">0</string>
    <string name="delimiter">-</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="replay">replay</string>
    <string name="gamer_weapon">gamer weapon</string>
</resources>