<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment">

    <ImageView
        android:id="@+id/enemy_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:src="@drawable/ic_robot_128"
        app:layout_constraintBottom_toTopOf="@id/delimiter_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/enemy_score_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starting_score"
        android:textColor="?attr/colorSecondary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/delimiter_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enemy_imageview"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_editor_absoluteY="192dp" />

    <TextView
        android:id="@+id/delimiter_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delimiter"
        android:textColor="?attr/colorSecondary"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gamer_score_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enemy_score_textview"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/gamer_score_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starting_score"
        android:textColor="?attr/colorSecondary"
        android:textSize="@dimen/text_size_big"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/choose_weapon_prompt_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delimiter_textview" />

    <TextView
        android:id="@+id/choose_weapon_prompt_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/select_weapon_prompt"
        android:textColor="?attr/colorSecondary"
        android:textSize="@dimen/text_size_regular"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/paper_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gamer_score_textview" />


    <ImageButton
        android:id="@+id/rock_button"
        android:layout_width="@dimen/weapon_image_size_small"
        android:layout_height="@dimen/weapon_image_size_small"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/rock"
        android:scaleType="centerInside"
        android:src="@drawable/ic_rock_64"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/paper_button"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/paper_button"
        android:layout_width="@dimen/weapon_image_size_small"
        android:layout_height="@dimen/weapon_image_size_small"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/paper"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_paper_plane_64"
        app:layout_constraintBottom_toBottomOf="@id/rock_button"
        app:layout_constraintEnd_toStartOf="@id/scissors_button"
        app:layout_constraintStart_toEndOf="@id/rock_button"
        app:layout_constraintTop_toTopOf="@id/rock_button" />

    <ImageButton
        android:id="@+id/scissors_button"
        android:layout_width="@dimen/weapon_image_size_small"
        android:layout_height="@dimen/weapon_image_size_small"
        android:layout_marginEnd="@dimen/medium_margin"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/scissors"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_scissors_64"
        app:layout_constraintBottom_toBottomOf="@id/paper_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/paper_button"
        app:layout_constraintTop_toTopOf="@id/paper_button" />

</androidx.constraintlayout.widget.ConstraintLayout>