<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameResult">

    <ImageView
        android:id="@+id/enemy_weapon_imageview"
        android:layout_width="@dimen/weapon_image_size"
        android:layout_height="@dimen/weapon_image_size"
        android:layout_marginTop="@dimen/medium_margin"
        android:src="@drawable/ic_dog_128"
        app:layout_constraintEnd_toEndOf="@+id/game_result_message_textview"
        app:layout_constraintStart_toStartOf="@+id/game_result_message_textview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/game_result_message_textview"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/game_result_message_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="?attr/colorSecondary"
        android:text="@string/something_went_wrong"
        android:textSize="@dimen/text_size_regular"
        app:layout_constraintBottom_toTopOf="@id/gamer_weapon_imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enemy_weapon_imageview"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/gamer_weapon_imageview"
        android:layout_width="@dimen/weapon_image_size"
        android:layout_height="@dimen/weapon_image_size"
        android:layout_marginBottom="@dimen/medium_margin"
        android:src="@drawable/ic_dog_128"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/game_result_message_textview"
        app:layout_constraintStart_toStartOf="@id/game_result_message_textview"
        app:layout_constraintTop_toBottomOf="@id/game_result_message_textview"
        android:contentDescription="@string/gamer_weapon" />

    <ImageView
        android:id="@+id/replay_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margine"
        android:src="@drawable/ic_replay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/replay" />

</androidx.constraintlayout.widget.ConstraintLayout>